fix double name issue in columns and fix spacing control not showing properly

--- a/packages/galleryberg-gallery-block/src/gallery/editor.scss
+++ b/packages/galleryberg-gallery-block/src/gallery/editor.scss
@@ -3,3 +3,11 @@
 	grid-column: 1 / span 3;
 	column-span: all;
 }
+.galleryberg-gallery-columns {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	grid-column: 1 / -1;
+	margin-bottom: -50px;
+	z-index: 9;
+}
